--- a/login/login.html
+++ b/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>登录</title>
     <link rel="stylesheet" href="../css/public/reset.css">
@@ -25,19 +25,7 @@
               <div class="from-group">
                   <span class="from-tit">手机号:</span>
                   <div class="from-icon">
-<<<<<<< HEAD
                         <img src="../image/login/shouji.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                        <img src="../image/login/shouji.png" alt="">
-=======
-                        <img src="../../image/login/shouji.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                        <img src="../image/login/shouji.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                   <input type="text" name="phone" placeholder="请输入手机号"class="pptt phone" value>
                     </div>
               </div>
@@ -45,19 +33,7 @@
               <div class="from-group">
                     <span class="from-tit">密码:</span>
                     <div class="from-icon">
-<<<<<<< HEAD
                             <img src="../image/login/suo.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <img src="../image/login/suo.png" alt="">
-=======
-                            <img src="../../image/login/suo.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                            <img src="../image/login/suo.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                     <input type="password" name="pwd" placeholder="请输入密码" class="pptt pwd" value>
                 </div>
                 </div>
