--- a/login/register.html
+++ b/login/register.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>注册</title>
 		<link rel="stylesheet" href="../css/public/reset.css">
@@ -27,7 +27,7 @@
 						<span class="from-tit">用户名:</span>
 						<div class="from-icon">
 							<img src="../image/login/user.png" alt="">
-							<input type="text" placeholder="请输入用户名" name="uname" value class="pptt username ">
+							<input type="text" placeholder="请输入用户名 6~16位" name="uname" value class="pptt username ">
 						</div>
 					</div>
 					<div class="info mistake"></div>
@@ -35,7 +35,7 @@
 						<span class="from-tit">密码:</span>
 						<div class="from-icon">
 							<img src="../image/login/suo.png" alt="">
-							<input type="password" placeholder="请输入用户密码" name="pwd" value class="pptt password">
+							<input type="password" placeholder="请输入密码 6~16位" name="pwd" value class="pptt password">
 						</div>
 					</div>
 					<div class="info mistake"></div>
