--- a/login/retrieve.html
+++ b/login/retrieve.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>找回密码</title>
     <script src="../js/public/rem.js"></script>
@@ -24,19 +24,7 @@
                     <div class="from-group">
                         <span class="from-tit">手机号:</span>
                         <div class="from-icon">
-<<<<<<< HEAD
                                 <img src="../image/login/good.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                <img src="../image/login/good.png" alt="">
-=======
-                                <img src="../../image/login/shouji.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                                <img src="../image/login/good.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                         <input type="phone" placeholder="请输入手机号" name="phone"class="pptt phone" value>
                         </div>
                     </div>
@@ -44,19 +32,7 @@
                     <div class="from-group">
                             <span class="from-tit">验证码:</span>
                             <div class="from-icon  from-verify">
-<<<<<<< HEAD
                                     <img src="../image/login/yanz.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                    <img src="../image/login/yanz.png" alt="">
-=======
-                                    <img src="../../image/login/yanz.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                                    <img src="../image/login/yanz.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                             <input type="text" placeholder="请输入验证码" name="verify"class="pptt verify" value maxlength="6">
                             </div>
                         <button type="button" class="acquire" >获取验证码</button>
@@ -65,19 +41,7 @@
                       <div class="from-group">
                             <span class=" from-tit from-cc">设置密码:</span>
                             <div class="from-icon ">
-<<<<<<< HEAD
                                     <img src="../image/login/suo.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                    <img src="../image/login/suo.png" alt="">
-=======
-                                    <img src="../../image/login/suo.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                                    <img src="../image/login/suo.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                             <input type="password" placeholder="请重置新密码"name="pwd"class="pptt  pwd1"  value>
                             </div>
                       </div>
@@ -85,19 +49,7 @@
                       <div class="from-group">
                             <span class="from-tit from-cc">再输入密码:</span>
                             <div class="from-icon">
-<<<<<<< HEAD
                                     <img src="../image/login/suo.png" alt="">
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                    <img src="../image/login/suo.png" alt="">
-=======
-                                    <img src="../../image/login/suo.png" alt="">
->>>>>>> 0d2049e196f47043fd0d3263849b1597c9dbca8a
-=======
-                                    <img src="../image/login/suo.png" alt="">
->>>>>>> 1db10f9580e21b0e4e98bbc46cf09cc11bdeeece
->>>>>>> d83fb812ce1a81a5d6d84e53e120fda0b3e61d9b
                             <input type="password" placeholder="请再输入一次密码" name="pwd1"class="pptt pwd2" value >
                             </div>
                       </div>
